# LLMTabManager

./: .gitignore  README.md
backend/: imp.ipynb  pyproject.toml  s.py  scrape.ipynb  scrape.py  t.py  tokenizer.json
example_history_pull_extension/: background.js  highlightText.js  manifest.json
extension-2/: background.js  content.js  manifest.json  popup.html  style.css
frontend/jump-to-tab-project/: package-lock.json  package.json
frontend/jump-to-tab-project/src/: App.css  App.tsx  index.tsx
hello_react/: package-lock.json
hello_react/src/: App.css  App.js
svelte-front/src/routes/: +page.svelte
svelte-front/src/routes/clean/: +page.server.js  +page.svelte  Login.svelte  RefCard.svelte  Tab.svelte
