[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Oscar Laird <olaird25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
torch = "^2.2.0"
transformers = "^4.37.2"
tqdm = "^4.66.1"
pgvector = "^0.2.5"
aiohttp = "^3.9.3"
nest-asyncio = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
